--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-Terraform/terraform.tfstate
-Terraform/.terraform.lock.hcl
-Terraform/.terraform/modules/modules.json
-Terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.99.1/linux_amd64/LICENSE.txt
-Terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/5.99.1/linux_amd64/terraform-provider-aws_v5.99.1_x5
-Terraform/terra-full.pem
+docker-compose.yml
